@@ -51,9 +51,9 @@ QueueUserAPCEx by Panagiotis E. Hadjidoukas
 	are runnable. The simulated async cancellation cannot cancel blocked
 	threads.
 
-	QueueUserAPCEx is required in C++ builds to avoid longjmp-style
-	context switching in pthread_cancel(), which will otherwise affect
-	exception handling and proper application behaviour.
+        [FOR SECURITY] To be found Quserex.dll MUST be installed in the
+	Windows System Folder. This is not an unreasonable constraint given a
+	driver must also be installed and loaded at system startup.
 
 
 Library naming
@@ -87,8 +87,8 @@ can differentiate between binary incompatible versions of the
 libs and dlls.
 
 In general:
-	pthread[VG]{SE,CE,C}c.dll
-	pthread[VG]{SE,CE,C}c.lib
+	pthread[VG]{SE,CE,C}[c].dll
+	pthread[VG]{SE,CE,C}[c].lib
 
 where:
 	[VG] indicates the compiler
@@ -102,7 +102,7 @@ where:
 
 	c	- DLL compatibility number indicating ABI and API
 		  compatibility with applications built against
-		  any snapshot with the same compatibility number.
+		  a snapshot with the same compatibility number.
 		  See 'Version numbering' below.
 
 The name may also be suffixed by a 'd' to indicate a debugging version
@@ -110,7 +110,7 @@ of the library. E.g. pthreadVC2d.lib. Debugging versions contain
 additional information for debugging (symbols etc) and are often not
 optimised in any way (compiled with optimisation turned off).
 
-For example:
+Examples:
 	pthreadVSE.dll	(MSVC/SEH)
 	pthreadGCE.dll	(GNUC/C++ EH)
 	pthreadGC.dll	(GNUC/not dependent on exceptions)
