@@ -39,7 +39,7 @@
 #define _IMPLEMENT_H
 
 #if !defined(_WIN32_WINNT)
-#define _WIN32_WINNT 0x400
+#define _WIN32_WINNT 0x0400
 #endif
 
 #include <windows.h>
